# perceptron

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
inc/: perceptron.h  randomFloat.h  trainer.h
src/: main.cpp  perceptron.cpp  randomFloat.cpp  trainer.cpp
